# PyreNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: Activation.cpp  Activation.h  Layer.cpp  Layer.h  LayerDefinition.cpp  LayerDefinition.h  NeuralNet.cpp  NeuralNet.h  Perceptron.cpp  Perceptron.h  PyreNet.h
src/activations/: Activation.h  ActivationFactory.cpp  ActivationFactory.h  Linear.cpp  Linear.h  Relu.cpp  Relu.h  Sigmoid.cpp  Sigmoid.h  Step.cpp  Step.h  Tanh.cpp  Tanh.h
src/exceptions/: InvalidInputSize.cpp  InvalidInputSize.h  InvalidLayer.cpp  InvalidLayer.h  InvalidNetworkSize.cpp  InvalidNetworkSize.h
src/random/: RandomGenerator.cpp  RandomGenerator.h
src/thread/: LayerThreadPool.cpp  LayerThreadPool.h
tst/: Test.cpp
